--- a/src/components/CarouselHeader/CarouselHeader.module.css
+++ b/src/components/CarouselHeader/CarouselHeader.module.css
@@ -123,7 +123,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 150px;
+  width: 100%;
   height: 100%;
   object-fit: cover;
   transition: opacity var(--transition-base);
