--- a/src/app/admin/ver-ordenes/verOrdenes.module.css
+++ b/src/app/admin/ver-ordenes/verOrdenes.module.css
@@ -33,8 +33,8 @@
 }
 
 .container {
-  max-width: 1200px;
-  margin: 0 auto;
+  max-width: -webkit-fill-available;
+  margin: 0 80px;
   padding: 2rem;
   font-family: var(--font-body), system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   background-color: var(--color-bg-primary);
